[package]
name = "krustlet-cri"
version = "0.2.0"
authors = ["kflansburg <kevin.flansburg@gmail.com>"]
edition = "2018"

[dependencies]
kubelet = { git="https://github.com/deislabs/krustlet.git", features = ['cli'], tag="v0.4.0" }
tokio = { version = "0.2", features = ["macros", "net"] }
kube = "0.35"
env_logger = "0.7"
anyhow = "*"
async-trait = "0.1"
log = "0.4"
tonic = { version = "0.2" }
prost = "0.6"
tower = "*"
k8s-openapi = { version = "0.8.0", features = ["v1_17"] }
k8s-cri = "0.2.0" 
chrono = "*"
